--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fin-fe/react-for-smple-echarts.git"
+  },
   "dependencies": {
     "element-resize-event": "^2.0.5"
   },
