--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-for-smple-echarts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "react smiple-echarts",
   "main": "echarts-for-react.js",
   "scripts": {
@@ -10,9 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/fin-fe/react-for-smple-echarts.git"
   },
+  "bugs": {
+    "url": "https://github.com/fin-fe/react-for-smple-echarts/issues"
+  },
   "dependencies": {
     "element-resize-event": "^2.0.5"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://github.com/fin-fe/react-for-smple-echarts#readme"
 }
