--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-for-smple-echarts",
+  "name": "react-for-smiple-echarts",
   "version": "1.0.3",
   "description": "react smiple-echarts",
   "main": "echarts-for-react.js",
